# HillelC-

./: .gitignore
Calculator/: CMakeLists.txt  Calculator.cpp  Header.h  main.cpp
HW13/: CMakeLists.txt  main.cpp
HW19/: CMakeLists.txt  data.csv  main.cpp
HW4T2/: CMakeLists.txt  main.cpp
HW8/: HW8.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW8/math/: math.cpp  math.hpp
HomeWork10/: CMakeLists.txt  main.cpp
HomeWork11/: CMakeLists.txt  main.cpp
HomeWork14/: CMakeLists.txt  main  main.cpp
HomeWork14/main.dSYM/Contents/Resources/DWARF/: main
HomeWork14/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
HomeWork2/: CMakeLists.txt  main  main.cpp
HomeWork2/main.dSYM/Contents/Resources/DWARF/: main
HomeWork3/: CMakeLists.txt  main.cpp
HomeWork4/: main.cpp
HomeWork8/: CMakeLists.txt  main  main.cpp
HomeWork8/main.dSYM/Contents/Resources/DWARF/: main
HomeWork9/: CMakeLists.txt  main  main.cpp
HomeWork9/main.dSYM/Contents/Resources/DWARF/: main
HwPro1/: main.cpp
HwPro3/: CMakeLists.txt  main.cpp
HwPro4/: CMakeLists.txt  main.cpp
Pro1/: CMakeLists.txt  main.cpp
Pro2/: CMakeLists.txt  Logger.h  SafeQueue.cpp  SafeQueue.h  SleepManager.cpp  SleepManager.h  Worker.cpp  Worker.h  main.cpp
Pro3/: CMakeLists.txt  main.cpp
Pro5-6/: CMakeLists.txt  Pro5-6.rar  main.cpp
Pro5-6/math/: math.hpp
Pro5-6/mymath_shared.dir/RelWithDebInfo/: objects.txt
Pro7/: CMakeLists.txt  main.cpp
Pro7/math_shared/: CMakeLists.txt  math.cpp
Pro7/math_static/: CMakeLists.txt
Test/: CMakeLists.txt  config.txt  main.cpp
(+3 files in other folders)
